Spacing fix

--- a/webapp/client/stylesheets/style.scss
+++ b/webapp/client/stylesheets/style.scss
@@ -14,6 +14,10 @@ $primary-color: #607d8b !default;
   font-size: 1.5rem;
 }
 
+h5 {
+  margin: 1.82rem 0 0.656rem 0;
+}
+
 .home-pics {
   @extend .blue-grey;
   @extend .darken-1;
